<resources>
    <string name="app_name">MyGitHubUser</string>
    <string name="search_user">Search User</string>

    <string name="search_hint">Search User</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab">Tab</string>
    <string name="user_detail_error">Error loading user\'s detail</string>
    <string name="favorite_fab">Favorite Fab</string>
    <string name="favorite_list">Favorite List</string>
    <string name="theme_setting">Theme setting</string>
    <string name="dark_mode">Dark mode</string>
</resources>