<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_person_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search_user" />

    <item
        android:id="@+id/favorite_list"
        android:icon="@drawable/baseline_favorite_24_white"
        app:showAsAction="collapseActionView|always"
        android:title="@string/favorite_list"/>

    <item
        android:id="@+id/theme_setting"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="collapseActionView|always"
        android:title="@string/theme_setting"/>
</menu>